#105: mobile alignment fixed

--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -37,6 +37,7 @@
   font-size: 16px;
   color: var(--txt-1);
   border-color: var(--bg-3);
+  justify-content: center;
 }
 
 .GitHub :global(svg) {
